# AI_in_Software_engineering_Mohamad_Ibrahim_Ghassan_Wehbe

./: Dockerfile  Project_Checklist.md  README.md  README.txt  app.py  data_loader.py  evaluate_model.py  feature_engineering.py  movies.csv  pyproject.toml  ratings.csv  recommender_knn_model.pkl  tasks.py  test.py  test_add_data.py  test_gui.py  train_model_svd.py  utils.py
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
src/: Dockerfile  app.py  main.py
src/config/: config.py  config.yaml
src/data/: data_loader.py
src/features/: feature_engineering.py
src/models/: evaluate_model.py  train_model_knn.py  train_model_svd.py
src/monitoring/: monitoring.py
src/utils/: utils.py
tests/integration/: test_api_endpoints.py
tests/unit/: test.py  test_dataloader.py  test_evaluate_model.py  test_train_models.py
