[tool.poetry]
name = "recommender-system"
version = "0.1.0"
description = ""
authors = ["Ghassan Wehbe <ghassan.wehbe1@net.usj.edu.lb>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
fastapi = "^0.115.5"
prometheus-fastapi-instrumentator = "^7.0.0"
requests = "^2.32.3"
uvicorn = "^0.32.1"
pytest = "^8.3.4"
omegaconf = "^2.3.0"
pydantic = "^2.10.3"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
invoke = "^2.2.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
